tests/fsharp/typecheck/sigs/neg50.bsl

neg50.fs(19,28,19,36): typecheck error FS1231: The type 'En<string>' is not a valid enumerator type , i.e. does not have a 'MoveNext()' method returning a bool, and a 'Current' property

neg50.fs(22,28,22,40): typecheck error FS1231: The type 'En<Struct>' is not a valid enumerator type , i.e. does not have a 'MoveNext()' method returning a bool, and a 'Current' property

neg50.fs(25,30,25,33): typecheck error FS1231: The type 'En<'a>' is not a valid enumerator type , i.e. does not have a 'MoveNext()' method returning a bool, and a 'Current' property

neg50.fs(42,28,42,31): typecheck error FS1231: The type 'En' is not a valid enumerator type , i.e. does not have a 'MoveNext()' method returning a bool, and a 'Current' property

neg50.fs(60,28,60,31): typecheck error FS1231: The type 'En' is not a valid enumerator type , i.e. does not have a 'MoveNext()' method returning a bool, and a 'Current' property

neg50.fs(77,28,77,31): typecheck error FS0693: The type 'T' is not a type whose values can be enumerated with this syntax, i.e. is not compatible with either seq<_>, IEnumerable<_> or IEnumerable and does not have a GetEnumerator method
